Adwaita: avoid clipping menu/popover shadow
Fixes https://gitlab.gnome.org/GNOME/gtk/-/issues/1987

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -4166,7 +4166,7 @@ menubar {
 $_menu-padding: 12px;
 
 popover.menu {
-  padding: 0;
+  padding: 2px 2px 2px 4px; //allow some shadow. #1987
 
   box.inline-buttons {
     padding: 0 $_menu-padding;
